<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasySMS</string>
    <string name="activity_inbox_title">Inbox</string>
    <string name="message_sent">Message Sent</string>
    <string name="message_sent_error">Error sending message</string>
    <string name="choose_contact">Choose a contact</string>

    <!-- Error prompts -->
    <string name="error_no_service">No service available.</string>

    <!-- Voice prompts -->
    <string name="promt_voice_help">To record your message click on the microphone at the top bar.</string>
    <string name="promt_enter_a_message">Please enter a message</string>
    <string name="promt_enter_a_phone_number">Please enter a phone number</string>
    <string name="promt_voice">Speak now!</string>
    <string name="promt_no_internet">No Internet connection</string>

    <!-- Dates -->
    <string name="date_format">yyyy-MM-dd</string>
    <string name="date_format_short">MMM dd</string>
    <string name="date_format_time">kk:mm</string>
    <string name="date_today">today</string>
    <string name="date_yesterday">yesterday</string>
    <string name="date_last_week">%d days ago</string>
    <string name="date_more_than_a_week">%d weeks ago</string>

    <!-- Menu -->
    <string name="menu_new_message">New message</string>
    <string name="menu_voice">Voice recognition</string>
    <string name="menu_delete">Delete thread</string>
    <string name="menu_send">Send</string>
    <string name="menu_call">Call</string>

    <!-- Placeholders -->
    <string name="placeholder_date">today</string>
    <string name="placeholder_counter">2</string>
    <string name="placeholder_name">John William Doe</string>
    <string name="placeholder_phonenumber">+41762348225</string>
    <string name="placeholder_text">This is a really long message, this way we test what happends if the length exceeds the size of the text field.</string>

    <!-- Content Descriptions -->
    <string name="description_contact_image">Contact Image</string>

    <!-- Arrays -->
    <string-array name="icons_array">
        <item>Ok</item>
        <item>No</item>
        <item>Late</item>
        <item>Call</item>
        <item>Empty</item>
        <item>Busy</item>
        <item>Hurry!</item>
        <item>How are you?</item>
        <item>Love</item>
        <item>Car</item>
        <item>Date?</item>
        <item>Time?</item>
    </string-array>
    <string-array name="sentenses_array">
        <item>Ok.</item>
        <item>No.</item>
        <item>"I'm late."</item>
        <item>Call me!</item>
        <item>"I don't have more battery."</item>
        <item>"I can't answer right now, I'm busy."</item>
        <item>Hurry up!</item>
        <item>How are you?</item>
        <item>"I'm thinking of you."</item>
        <item>"I'm driving."</item>
        <item>When?</item>
        <item>At what time?</item>
    </string-array>

</resources>