<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_voice"
        android:icon="@drawable/ic_action_voice"
        android:showAsAction="always"
        android:title="@string/menu_voice"
        android:titleCondensed="@string/menu_voice"/>
    <item
        android:id="@+id/menu_call"
        android:icon="@drawable/ic_action_call"
        android:showAsAction="always"
        android:title="@string/menu_call"
        android:titleCondensed="@string/menu_call"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_action_delete"
        android:showAsAction="never"
        android:title="@string/menu_delete"
        android:titleCondensed="@string/menu_delete"/>

</menu>