<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:background="@android:color/white"
    android:paddingRight="@dimen/margin" >

    <ImageView
        android:id="@+id/inbox_item_image_contact"
        android:layout_width="?android:attr/listPreferredItemHeight"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="@dimen/margin"
        android:contentDescription="@string/description_contact_image"
        android:scaleType="centerCrop"
        android:src="@drawable/nophotostored" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/inbox_item_image_contact"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/inbox_item_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin"
            android:text="@string/placeholder_name"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:id="@+id/inbox_item_text_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/placeholder_phonenumber"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/font_small" />

        <TextView
            android:id="@+id/inbox_item_text_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/placeholder_text"
            android:textSize="@dimen/font_medium" />
    </LinearLayout>

    <TextView
        android:id="@+id/inbox_item_text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/placeholder_date"
        android:textSize="@dimen/font_medium" />

</RelativeLayout>