<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/org.easysms.android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ECECEC"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/conversation_item_image_contact"
        android:layout_width="?android:attr/listPreferredItemHeight"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:contentDescription="@string/description_contact_image"
        android:scaleType="centerCrop"
        android:src="@drawable/nophotostored" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="@dimen/margin" >

        <org.easysms.android.ui.KaraokeLayout
            android:id="@+id/conversation_item_karaoke_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/placeholder_text" >
        </org.easysms.android.ui.KaraokeLayout>

        <TextView
            android:id="@+id/conversation_item_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_date"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/font_small" />
    </LinearLayout>

</LinearLayout>